<resources>
    <string name="lbl_currency">£</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="new_user">New user?</string>
    <string name="full_name">Full name</string>
    <string name="term_condition"><![CDATA[By tapping create account, log in with facebook, I agree with our Terms &amp; Conditions, and Privacy Policy.]]></string>
    <string name="not_the_first_time">Not the first time?</string>
    <string name="create_account">Create Account</string>
    <string name="log_in_with_facebook">Log in with facebook</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_email">Send Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="lastest">Latest</string>
    <string name="trending">Trending</string>
    <string name="brand">Brand</string>
    <string name="select_here">Select here</string>
    <string name="to_buy_or_save">( to buy or save )</string>
    <string name="qt">Qt</string>
    <string name="size">Size</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="buy_now">Buy Now</string>
    <string name="detail">Details</string>
    <string name="comments">Comments</string>
    <string name="about">About</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="login_faceboo_error">Can\'t log in Facebook</string>
    <string name="lbl_login_orther_user">User logged in as different Facebook user. Please login again.</string>
    <string name="lbl_login_fail_facebook_hidden_email">Your facebook account is hiding email from the public. Please make sure you specify and share your email from your facebook account.</string>
    <string name="please_input_first_name">Please input your first name</string>
    <string name="please_input_your_last_name">Please input your last name</string>
    <string name="please_input_email">Please input email</string>
    <string name="please_input_password">Please input password</string>
    <string name="wrong_email_type">Wrong email type</string>
    <string name="Follow">Follow</string>
    <string name="product">Product</string>
    <string name="review">Review</string>
    <string name="like">Likes</string>
    <string name="last_24h">Last 24H</string>
    <string name="last_2_days">Last 2 Days</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="last_week">Last Week</string>
    <string name="last_30_days">Last 30 Days</string>
    <string name="last_month">Last Month</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="payment_details">Payment Details</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="setting">Setting</string>
    <string name="customer_care">Customer Care</string>
    <string name="logout">Log out</string>
    <string name="menu">Menu</string>
    <string name="following">Following</string>
    <string name="collection">Collection</string>
    <string name="follower">Follower</string>
    <string name="activity">Activity</string>
    <string name="orders">Orders</string>
    <string name="favorite">Favorite</string>
    <string name="load_more">Loading</string>
    <string name="no_data">No Data</string>
    <string name="add_new_collection">Add New Collection</string>
    <string name="show_more"><u>Show More</u></string>
    <string name="no_more_data">No more data</string>
    <string name="this_product_has_no_comment">This product has no comment</string>
    <string name="edit">edit</string>
    <string name="editing_profile">Editing Profile</string>
    <string name="save">Save</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="biography">Biography</string>
    <string name="location">Location</string>
    <string name="change_password">Change Password</string>
    <string name="edit_credit_card">Edit Credit Card</string>
    <string name="edit_address">Edit Address</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="editing_password">Editing Password</string>
    <string name="input_current_password">Please input your current password</string>
    <string name="input_new_password">Please input new password</string>
    <string name="input_confirm_password">Please input confirm password</string>
    <string name="confirm_password_mismatch">Confirm password mismatch</string>
    <string name="tap_to_change_the_cover">Tap to change the cover</string>
    <string name="shop_now">Shop Now</string>
    <string name="select_photo_from">Get image from</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="message">Message</string>
    <string name="color">Color</string>
    <string name="have_no_collection">Have no collection</string>
    <string name="go_to_brand_shop"><u>Go To Brand Shop</u></string>
    <string name="email_has_been_sent">Email has been sent!</string>
    <string name="continue_as_a_guest">Continue as a guest ></string>
    <string name="please_login">Please login to use this function!</string>
    <string name="alert">Alert!</string>
    <string name="will_update_soon">We will update this function soon!</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="our_picks">Our picks</string>
    <string name="new_items">New items</string>
    <string name="price_hight_first">Pirce( Hight first )</string>
    <string name="price_low_first">Price( Low first )</string>
    <string name="price">Price</string>
    <string name="follow">Follow</string>
    <string name="save_to_my_collection">Save to my collection</string>
    <string name="search_contact">Search contact</string>
    <string name="add">Add</string>
    <string name="share">Share</string>
    <string name="send_in_impakter">Send in Impakter</string>
    <string name="inprogress">In Progress</string>
    <string name="shipped">Shipped</string>
    <string name="delivered">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="lbl_edit">Edit</string>
    <string name="add_new_payment">Add New Payment</string>
    <string name="card_holder_s_name">Card holder\'s name</string>
    <string name="card_number">Card number</string>
    <string name="same_as_my_shipping_address">Same as my shipping address</string>
    <string name="billing_address">Billing Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip Code</string>
    <string name="my_bag">My Bag</string>
    <string name="add_to_bag_success">This item has been added  to your shopping bag</string>
    <string name="keep_shopping">Keep Shopping</string>
    <string name="introduce">By creating an account you will be able to shop faster, be up to date on an order’s status, and keep track of the orders you have previously made.</string>
    <string name="check_out_as_a_guest">Check out as a guest</string>
    <string name="shipping">Shipping</string>
    <string name="confirm">Confirm</string>
    <string name="payment">Payment</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="add_address">Add address +</string>
    <string name="lbl_continue">Continue</string>
    <string name="order_reference">Order reference</string>
    <string name="order_date">Order date</string>
    <string name="shipping_address">Shipping address</string>
    <string name="card_information">Card information</string>
    <string name="save_my_details">Save my details</string>
    <string name="sub_total">Subtotal</string>
    <string name="total">Total</string>
    <string name="msg_thank_you">Thank you for shopping with Impakter</string>
    <string name="order_info_has_sent_email">The order information has already been sent to your email!</string>
    <string name="go_to_my_order">Go to my order</string>
    <string name="go_to_home">Go to home</string>
    <string name="go_to_my_profile">Go to my profile</string>
    <string name="address_details">Address Details</string>
    <string name="primary_address">Primary Address</string>
    <string name="other_address">Other Address</string>
    <string name="add_new_address">Add new address</string>
    <string name="set_as_the_primary_address">Set as the primary address</string>
    <string name="delete">Delete</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="collection_name">Collection Name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="input_collection_name">Please input your collection name!</string>
    <string name="have_no_notication">Have no notification</string>
    <string name="have_no_activity">Have no activity</string>
    <string name="confirm_delete_collection">Do you really want to delete this collection?</string>
    <string name="edit_collection">Edit Collection</string>
    <string name="draft">Draft</string>
    <string name="lbl_new">New</string>
    <string name="to_ship">To ship</string>
    <string name="responsive_required">Responsive required</string>
    <string name="all">All</string>
    <string name="order_no">Order No</string>
    <string name="none">None</string>
    <string name="oder_details">Oder Details</string>
    <string name="contact">Contact</string>
    <string name="shipping_price">Shipping Price</string>
    <string name="oder_date">Oder date</string>
    <string name="shipping_information">Shippment information</string>
    <string name="have_some_problems_contact_buyer">Have some problems? Contact buyer</string>
    <string name="add_review">Add Review</string>
    <string name="order_review">Order Review</string>
    <string name="submit">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_review_has_been_submitted">Your review has been submitted!</string>
    <string name="back_to_profile">Back to profile</string>
    <string name="add_more_review">Add more review</string>
    <string name="taxes">Taxes</string>
    <string name="sku">SKU</string>
    <string name="confirm_rename_collection">Do you really want to rename this collection?</string>
    <string name="move_to">Move to</string>
    <string name="item">Items</string>
    <string name="discount">Discount</string>
    <string name="quantity">Quantity</string>
    <string name="have_no_conversation">Have no conversation</string>
    <string name="order_code">Order code:</string>
    <string name="lbl_order_date">Order date:</string>
    <string name="lbl_item">Items:</string>
    <string name="status">Status</string>
    <string name="forward_order">Forward Order</string>
    <string name="confirmed">Confirmed</string>
    <string name="packed">Packed</string>
    <string name="received_orders">Received Orders</string>
    <string name="no_preference">No Preference</string>
    <string name="most_recent">Most Recent</string>
    <string name="most_dated">Most Dated</string>
    <string name="have_no_order">Have no order</string>
    <string name="other_product_information"><u>Other product information</u></string>
    <string name="solved">Solved</string>
    <string name="reviewing">Reviewing</string>
</resources>