<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:src="@drawable/ic_back" />

        <com.impakter.seller.widget.textview.TextViewHeeboRegular
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_weight="1"
            android:text="@string/editing_profile"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/sp_16" />

        <com.impakter.seller.widget.textview.TextViewHeeboRegular
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/btn_change_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_color_gray">

                <ImageView
                    android:id="@+id/iv_cover"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_100"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_camera"
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_30"
                        android:src="@drawable/ic_camera" />

                    <com.impakter.seller.widget.textview.TextViewHeeboRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_camera"
                        android:layout_marginTop="2dp"
                        android:text="@string/tap_to_change_the_cover"
                        android:textColor="@color/text_color_white" />
                </LinearLayout>

            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:src="@drawable/head1" />

            <com.impakter.seller.widget.textview.TextViewHeeboRegular
                android:id="@+id/tv_change_profile_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/change_profile_photo"
                android:textColor="@color/color_blue" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_16">

                <com.impakter.seller.widget.MyEditText
                    android:id="@+id/edt_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:textColor="@color/text_color_primary"
                    android:theme="@style/EditTextGrayTheme" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30">

                <com.impakter.seller.widget.MyEditText
                    android:id="@+id/edt_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:textColor="@color/text_color_primary"
                    android:theme="@style/EditTextGrayTheme" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30">

                <com.impakter.seller.widget.MyEditText
                    android:id="@+id/edt_biography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/biography"
                    android:textColor="@color/text_color_primary"
                    android:theme="@style/EditTextGrayTheme" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30">

                <com.impakter.seller.widget.MyEditText
                    android:id="@+id/edt_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:textColor="@color/text_color_primary"
                    android:theme="@style/EditTextGrayTheme" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30">

                <com.impakter.seller.widget.MyEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/text_color_primary"
                    android:theme="@style/EditTextGrayTheme" />
            </android.support.design.widget.TextInputLayout>

            <com.impakter.seller.widget.textview.TextViewHeeboRegular
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:gravity="center"
                android:paddingTop="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_12"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/bg_button_blue_border"
                android:text="@string/change_password"
                android:textAllCaps="true"
                android:layout_marginBottom="@dimen/dp_30"
                android:textColor="@color/text_color_blue"
                android:textSize="@dimen/sp_16" />

            <com.impakter.seller.widget.textview.TextViewHeeboRegular
                android:id="@+id/btn_edit_address"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_12"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/bg_button_blue_border"
                android:text="@string/edit_address"
                android:textAllCaps="true"
                android:textColor="@color/text_color_blue"
                android:textSize="@dimen/sp_16" />

            <com.impakter.seller.widget.textview.TextViewHeeboRegular
                android:id="@+id/btn_edit_credit_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:paddingTop="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/bg_button_blue_border"
                android:text="@string/edit_credit_card"
                android:textAllCaps="true"
                android:textColor="@color/text_color_blue"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>