<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_create_account" />

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/dp_32">

            <com.impakter.seller.widget.textview.TextViewHeeboRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/sp_24" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_32"
                android:theme="@style/TextLabel"
                android:textColorHint="@color/text_color_white">

                <com.impakter.seller.widget.MyEditText
                    android:id="@+id/edt_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_white"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:textColor="@color/text_color_white"
                    android:textColorHint="@color/text_color_white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:textColorHint="@color/text_color_white">

                <com.impakter.seller.widget.MyEditText
                    android:id="@+id/edt_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_white"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:textColor="@color/text_color_white"
                    android:textColorHint="@color/text_color_white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:textColorHint="@color/text_color_white">

                <com.impakter.seller.widget.MyEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_white"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:textColor="@color/text_color_white"
                    android:textColorHint="@color/text_color_white" />

            </android.support.design.widget.TextInputLayout>

            <com.impakter.seller.widget.MyTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:textColorHint="@color/text_color_white">

                <com.impakter.seller.widget.PasswordEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_white"
                    android:hint="@string/password"
                    android:theme="@style/EditTextTheme"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:textColor="@color/text_color_white"
                    android:textColorHint="@color/text_color_white"
                    app:useStrike="true" />

            </com.impakter.seller.widget.MyTextInputLayout>

            <com.impakter.seller.widget.textview.TextViewHeeboRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/term_condition"
                android:textColor="@color/text_color_white" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.impakter.seller.widget.textview.TextViewHeeboRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_the_first_time"
                android:textColor="@color/text_color_white" />

            <com.impakter.seller.widget.textview.TextViewHeeboRegular
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_marginLeft="@dimen/dp_4"
                android:textColor="@color/text_color_white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/bg_blue_button"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/sp_12"
            android:paddingTop="@dimen/sp_12">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_24"
                android:src="@drawable/ic_facebook" />

            <com.impakter.seller.widget.textview.TextViewHeeboRegular
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/log_in_with_facebook"
                android:textAllCaps="true"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/bg_button_main"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/sp_12"
            android:paddingTop="@dimen/sp_12">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_gravity="center_vertical" />

                <com.impakter.seller.widget.textview.TextViewHeeboRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="@string/create_account"
                    android:textAllCaps="true"
                    android:textColor="@color/text_color_blue"
                    android:textSize="@dimen/sp_16" />
            </FrameLayout>


        </LinearLayout>

    </LinearLayout>
</FrameLayout>